--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ dependencies = [
     "numpy==2.0.2",
     "scipy==1.15.1",
     "tqdm==4.67.1",
-    "onnxruntime==1.20.1"
+    "onnxruntime==1.20.1",
+    "plotly==5.24.1",
+    "kaleido==0.2.1"
 ]
 
 [build-system]
